--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Rigo Sosa</title>
+    <title class="bodyFont">OCTANE: A Coding Project By Rigo Sosa</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,6 +15,15 @@
 
     <link href="css/site.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png">
+
+    <!--Chiller/Mansalva Text CSS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap" rel="stylesheet">
+    <!--Body font/Roboto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mansalva&family=Roboto&display=swap" rel="stylesheet">
  
 </head>
 
@@ -22,7 +31,7 @@
     <!-- === Nav Section === -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/ICON2.svg" class="d-inline-block align-text-top" width="30" height="24"> APP NAME</a>
+        <a class="navbar-brand logoFont" href="#"><img src="img/ICON2.svg" class="d-inline-block align-text-top" width="30" height="24"> Octane</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +48,7 @@
                     <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://github.com/OgirSauce?tab=repositories">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/OgirSauce/Octane">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://rigo-portfolio.netlify.app/">About</a>
@@ -53,9 +62,9 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3">APP NAME: A Coding Project</h1>
-                    <h4 class="lead"><strong>Dispcription:</strong>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim neque volutpat ac tincidunt vitae semper. Sodales neque sodales ut etiam. Eu turpis egestas pretium aenean pharetra magna ac placerat. Bibendum enim facilisis gravida neque convallis a. Vitae nunc sed velit dignissim sodales ut eu sem integer. Eget nunc lobortis mattis aliquam faucibus purus. Egestas erat imperdiet sed euismod nisi porta lorem mollis. Justo nec ultrices dui sapien eget mi. Arcu odio ut sem nulla pharetra diam. Ut aliquam purus sit amet luctus. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Turpis nunc eget lorem dolor. Ac auctor augue mauris augue neque gravida. Ipsum consequat nisl vel pretium lectus quam.
+                    <h1 class="bodyFont Font display-6 fw-bold 1h-1 mb-3">Octane: A Coding Project</h1>
+                    <h4 class="bodyFont">
+                        Live life one loop at a time with Octane. A javascript coding exercise using loops. Write a program that displays the numbers from 0-100. Display the even numbers in <strong>BOLD</strong>.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -81,7 +90,7 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/applogo.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                    <img src="img/Octane.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
                 </div>
            </div>
        </div>
