Update GiThub link

--- a/code.html
+++ b/code.html
@@ -49,7 +49,7 @@
                         <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/OgirSauce?tab=repositories">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/OgirSauce/Octane">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://rigo-portfolio.netlify.app/">About</a>
