--- a/app.html
+++ b/app.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/OgirSauce?tab=repositories">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="hhttps://github.com/OgirSauce/Octane">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://rigo-portfolio.netlify.app/">About</a>
